Fix overlapping viewpanel-header
This fixes #2183

--- a/main/webapp/modules/core/styles/views/data-table-view.less
+++ b/main/webapp/modules/core/styles/views/data-table-view.less
@@ -39,21 +39,12 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   font-size: 1.3em;
   padding: @padding_normal;
   overflow: hidden;
-  text-align: right;
   }
 
 .viewpanel-rowrecord, .viewpanel-pagesize, .viewpanel-sorting {
-  position: absolute;
   top: @padding_normal;
   padding: 0 10px 0 0;
-  }
-
-.viewpanel-pagesize {
-  left: 180px;
-  }
-
-.viewpanel-sorting {
-  left: 350px;
+   float: left;
   }
 
 .viewpanel-pagingcount {
